tests/error/wasm_errors/wasm_bad_output_type.err
Error: WASM signature error (at $FILE:10:4)
   | 
 8 | class Foo:
 9 |     @wasm
10 |     def add(self: "Foo", x: int, y: int) -> bool: ...
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ WASM function signature contained an unsupported type:
   |                                                       `bool`

Guppy compilation failed due to 1 previous error
